tests/security/taintOnStrReplaceCallSimple/output.txt
ERROR: TaintedData - input.hack:19:14 - Data from a URL query string found its way to an HTML tag